--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -74,7 +74,7 @@ input, textarea {
 .icon-gift {
   display: inline-block;
   fill: #fff;
-  font-size: 3.7rem;
+  font-size: 3.2rem;
   width: 1em;
   height: .9em;
 }
@@ -92,6 +92,7 @@ input, textarea {
 }
 
 .section-title {
+  font-family: 'Open Sans', sans-serif;
   font-weight: bold;
   font-size: 38px;
   line-height: 52px;
@@ -112,6 +113,7 @@ input, textarea {
 }
 
 .c-btn {
+  font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   line-height: 19px;
   letter-spacing: 0.05em;
@@ -120,7 +122,7 @@ input, textarea {
   @include animation();
   outline: none;
   border: none;
-  color: #fff;
+  color: #EEF2F5;
   font-size: 14px;
   border-radius: 100px;
   display: inline-block;
@@ -170,9 +172,12 @@ input, textarea {
   }
 
   &__text {
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.05em;
     font-size: 14px;
     margin-bottom: 27px;
     text-align: center;
+    color: #4D5264;
 
     a {
       color: inherit;
@@ -185,13 +190,17 @@ input, textarea {
 }
 
 .c-input {
+  letter-spacing: 0.05em;
+  font-weight: 300;
+  color: #9BA0B4;
   width: 100%;
   padding: 13px 21px;
-  font-size: 16px;
+  font-size: 14px;
+  line-height: 24px;
   background: #FFFFFF;
   border: none;
   outline: none;
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.07);
   border-radius: 4px;
 }
 
@@ -219,6 +228,8 @@ input, textarea {
 
 .c-schema {
   position: relative;
+
+
 
   &__title {
     font-weight: normal;
@@ -255,7 +266,17 @@ input, textarea {
   &__data {
     width: 30px;
     position: relative;
+    height: 118px;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: flex-end;
+    align-items: stretch;
+
+    span {
+      display: block;
+    }
   }
+
 
   &__name {
     font-weight: normal;
@@ -280,17 +301,7 @@ input, textarea {
   }
 
   &--pink {
-    .c-schema__data {
-      height: 118px;
-      display: flex;
-      flex-flow: column wrap;
-      justify-content: flex-end;
-      align-items: stretch;
-
-      span {
-        display: block;
-      }
-
+    .c-schema__col {
       &:nth-child(1) span {
         background-color: #dd46a4;
 
@@ -315,9 +326,80 @@ input, textarea {
       &:nth-child(6) span {
         background-color: #fea3bb;
       }
-
     }
+
   }
+
+  &--green {
+    .c-schema__col {
+      &:nth-child(1) span {
+        background-color: #1ddeb8;
+      }
+
+      &:nth-child(2) span {
+        background-color: #21e1b1;
+      }
+
+      &:nth-child(3) span {
+        background-color: #26e5ab;
+      }
+
+      &:nth-child(4) span {
+        background-color: #2be9a5;
+      }
+
+      &:nth-child(5) span {
+        background-color: #31eea0;
+      }
+
+      &:nth-child(6) span {
+        background-color: #35f199;
+      }
+    }
+
+  }
+
+  &--blue {
+    .c-schema__col {
+      &:nth-child(1) span {
+        background-color: #0e83da;
+      }
+
+      &:nth-child(2) span {
+        background-color: #118ee0;
+      }
+
+      &:nth-child(3) span {
+        background-color: #149ae8;
+      }
+
+      &:nth-child(4) span {
+        background-color: #17a4ee;
+      }
+
+      &:nth-child(5) span {
+        background-color: #1aaff5;
+      }
+
+      &:nth-child(6) span {
+        background-color: #1dbafc;
+      }
+    }
+
+  }
+}
+
+.swiper-pagination-fraction {
+  letter-spacing: 0.05em;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 34px;
+  color: #9BA0B4;
+}
+
+.swiper-pagination-current {
+  color: #4D5264;
+
 }
 
 /****************************/
@@ -434,6 +516,10 @@ input, textarea {
   background-color: #fff;
   z-index: 999;
 
+  &.sticky {
+    //background: linear-gradient(180deg, #FFFFFF 60.48%, rgba(255, 255, 255, 0.77) 71.17%, rgba(255, 255, 255, 0) 89.75%);
+  }
+
   .header {
     font-family: 'Open Sans', sans-serif;
     display: flex;
@@ -442,6 +528,8 @@ input, textarea {
     align-items: center;
     padding: 35px 0 0;
     margin-bottom: 22px;
+
+
 
     &-logo {
       position: relative;
@@ -553,7 +641,8 @@ input, textarea {
 
     &-phone {
       position: relative;
-      a {
+
+      &__number {
         @include clear-link;
         font-weight: bold;
         font-size: 20px;
@@ -564,7 +653,7 @@ input, textarea {
         color: #95B7C6;
       }
 
-      span {
+      &__text {
         position: absolute;
         top: 100%;
         left: 0;
@@ -574,6 +663,7 @@ input, textarea {
         font-size: 12px;
         line-height: 14px;
         color: $black;
+        cursor: pointer;
       }
     }
 
@@ -663,6 +753,7 @@ input, textarea {
     margin-top: 62px;
 
     &__icon {
+      display: block;
       margin: 0 auto;
       position: relative;
       width: 20px;
@@ -733,6 +824,14 @@ input, textarea {
         }
       }
 
+      .swiper-pagination-fraction {
+        bottom: 10px;
+      }
+
+      .swiper-button-next:after,
+      .swiper-button-prev:after{
+        color: #4D5264;
+      }
 
 
     }
@@ -829,6 +928,15 @@ input, textarea {
       color: #fff;
       letter-spacing: 0.25em;
       margin-bottom: 41px;
+
+      .icon-arrow-down {
+        display: inline-block;
+        width: 15px;
+        height: 15px;
+        position: relative;
+        top: 2px;
+        background: url(../src/img/icon-arrow-down.png) 0 0 no-repeat;
+      }
     }
 
     &-schema {
@@ -846,11 +954,15 @@ input, textarea {
       }
 
       &__text {
+        font-size: 17px;
+        line-height: 23px;
         width: 100%;
         position: absolute;
         text-align: center;
         color: #fff;
         left: 0;
+        font-family: 'Open Sans', sans-serif;
+        letter-spacing: 0.05em;
 
         span {
           display: none;
@@ -923,6 +1035,7 @@ input, textarea {
           line-height: 24px;
           color: #EEF2F5;
           margin-right: 18px;
+          letter-spacing: 0.05em;
         }
 
         &__input {
@@ -941,6 +1054,15 @@ input, textarea {
           right: 12px;
           top: 50%;
           transform: translateY(-50%);
+
+          .icon-dice {
+            @include animation();
+            cursor: pointer;
+            &:hover {
+              @include animation();
+              fill: #0d81d8;
+            }
+          }
         }
       }
     }
@@ -1081,6 +1203,8 @@ input, textarea {
           text-transform: uppercase;
           color: $black;
           margin-bottom: 24px;
+          letter-spacing: 0.05em;
+          font-family: 'Open Sans', sans-serif;
 
         }
 
@@ -1125,7 +1249,12 @@ input, textarea {
         }
 
         &__done {
-          color: #FA81BC;;
+          color: #FA81BC;
+          font-weight: 500;
+          font-size: 24px;
+          line-height: 34px;
+          text-align: center;
+          letter-spacing: 0.05em;
         }
 
         &-all {
@@ -1141,6 +1270,8 @@ input, textarea {
           }
 
           &__num {
+            letter-spacing: 0.05em;
+            font-weight: bold;
             font-size: 24px;
             line-height: 34px;
             white-space: nowrap;
@@ -1286,26 +1417,30 @@ input, textarea {
         padding: 0;
         margin: 0 0 14px;
         list-style: none;
+        padding-left: 16px;
 
         li {
           position: relative;
-          padding-left: 25px;
+          padding-left: 34px;
           margin-bottom: 13px;
           font-size: 14px;
+          line-height: 14px;
+          letter-spacing: 0.05em;
 
           &::before {
             content: '';
-            border-right: 2px solid #36F298;
-            border-bottom: 2px solid #36F298;
+            border-right: 3px solid #36F298;
+            border-bottom: 3px solid #36F298;
             -webkit-transform: rotate(45deg);
             transform: rotate(45deg);
             display: inline-block;
             position: absolute;
             z-index: 1;
-            width: 5px;
-            height: 11px;
+            width: 7px;
+            height: 12px;
             left: 4px;
-            top: 1px;
+            top: 50%;
+            margin-top: -12px;
           }
         }
       }
@@ -1336,7 +1471,9 @@ input, textarea {
           list-style: none;
 
           li {
-            margin-bottom: 5px;
+            font-size: 14px;
+            line-height: 21px;
+            //margin-bottom: 5px;
           }
         }
       }
@@ -1353,8 +1490,8 @@ input, textarea {
 
         .cost-plane__list li::before {
           content: '';
-          border-right: 2px solid #36F298;
-          border-bottom: 2px solid #36F298;
+          border-right: 3px solid #36F298;
+          border-bottom: 3px solid #36F298;
         }
 
         .c-btn {
@@ -1380,8 +1517,8 @@ input, textarea {
 
         .cost-plane__list li::before {
           content: '';
-          border-right: 2px solid #0D83D9;
-          border-bottom: 2px solid #0D83D9;
+          border-right: 3px solid #0D83D9;
+          border-bottom: 3px solid #0D83D9;
         }
 
         .c-btn {
@@ -1417,8 +1554,8 @@ input, textarea {
 
         .cost-plane__list li::before {
           content: '';
-          border-right: 2px solid #DC44A3;
-          border-bottom: 2px solid #DC44A3;
+          border-right: 3px solid #DC44A3;
+          border-bottom: 3px solid #DC44A3;
         }
 
         .cost-plane-gift__list {
@@ -1455,6 +1592,7 @@ input, textarea {
     padding-left: 100px;
 
     &-title {
+      font-family: 'Open Sans', sans-serif;
       position: relative;
       z-index: 12;
       font-weight: bold;
@@ -1625,6 +1763,7 @@ input, textarea {
       background-color: #fff;
 
       &__title {
+        font-family: 'Open Sans', sans-serif;
         font-weight: bold;
         font-size: 24px;
         line-height: 33px;
@@ -1639,6 +1778,7 @@ input, textarea {
         font-size: 18px;
         line-height: 34px;
         color: $grey;
+        letter-spacing: 0.05em;
       }
 
     }
@@ -1654,6 +1794,7 @@ input, textarea {
 
   .audit {
     background: url(../src/img/section-audit-bg.jpg) 50% 50% no-repeat;
+    background-size: cover;
 
     position: relative;
     display: flex;
@@ -1666,6 +1807,7 @@ input, textarea {
     }
 
     &-title {
+      font-family: 'Open Sans', sans-serif;
       color: #FA81BC;
       font-weight: bold;
       font-size: 38px;
@@ -1674,6 +1816,7 @@ input, textarea {
     }
 
     &-sale {
+      font-family: 'Open Sans', sans-serif;
       display: inline-block;
       margin-right: 40px;
       font-weight: bold;
@@ -1686,9 +1829,10 @@ input, textarea {
     &-subtitle {
       font-weight: normal;
       font-size: 22px;
-      line-height: 1.3;
+      line-height: 34px;
       margin-bottom: 48px;
       color: $grey;
+      letter-spacing: 0.05em;
     }
 
     &-list {
@@ -1698,22 +1842,27 @@ input, textarea {
 
       li {
         position: relative;
-        padding-left: 25px;
+        padding-left: 34px;
         margin-bottom: 20px;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 18px;
+        line-height: 34px;
+        letter-spacing: 0.05em;
 
         &::before {
           content: '';
-          border-right: 2px solid #36F298;
-          border-bottom: 2px solid #36F298;
+          border-right: 3px solid #36F298;
+          border-bottom: 3px solid #36F298;
           -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
           display: inline-block;
           position: absolute;
           z-index: 1;
-          width: 5px;
-          height: 11px;
+          width: 7px;
+          height: 12px;
           left: 4px;
-          top: 1px;
+          top: 8px;
         }
       }
     }
@@ -1761,6 +1910,7 @@ input, textarea {
         color: #fff;
         margin-bottom: 40px;
         text-align: center;
+        letter-spacing: 0.05em;
       }
 
       .c-btn {
@@ -1803,7 +1953,8 @@ input, textarea {
     &-link {
       position: relative;
       @include clear-link;
-      font-family: Roboto;
+      font-family: 'Roboto', sans-serif;
+      letter-spacing: 0.05em;
       color: $grey;
       display: block;
       font-weight: normal;
@@ -1867,6 +2018,7 @@ input, textarea {
       }
 
       &__title {
+        font-family: 'Open Sans', sans-serif;
         font-weight: bold;
         font-size: 58px;
         line-height: 79px;
@@ -1943,6 +2095,7 @@ input, textarea {
         margin: 0 auto 40px;
 
         &__num {
+          font-family: 'Open Sans', sans-serif;
           position: relative;
           z-index: 2;
           font-weight: bold;
@@ -1971,6 +2124,8 @@ input, textarea {
       }
 
       &__title {
+        font-family: 'Open Sans', sans-serif;
+        letter-spacing: 0.05em;
         font-weight: bold;
         font-size: 24px;
         line-height: 33px;
@@ -2292,6 +2447,8 @@ input, textarea {
 
     &__item {
       margin-right: 20px;
+      font-weight: 300;
+      letter-spacing: 0.05em;
 
       &:last-child {
         margin-right: 0;
@@ -2300,6 +2457,7 @@ input, textarea {
 
     a {
       @include clear-link();
+
       color: $black;
       text-decoration: underline;
     }
