--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1344,13 +1344,37 @@ input, textarea {
 
   .cost {
     position: relative;
-    z-index: 2;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: stretch;
+    z-index: 2;    
     margin: 0 -20px;
     padding: 20px 215px;
+
+    &-grid {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: space-between;
+      align-items: stretch;
+    }
+
+    &-navigation {
+      display: none;
+      flex-flow: row nowrap;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 24px;
+
+      a {
+        display: block;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        padding: 10px 20px;
+        border-radius: 150px;
+        background-color: #ccc;
+        text-decoration: none;
+      }
+    }
 
     &-item {
       width: 33%;
