--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -127,7 +127,7 @@ input, textarea {
   letter-spacing: 0.05em;
   text-transform: uppercase;
   @include clear-link();
-  transition: .3s ease-in-out;
+  transition: all .3s ease-in-out;
   outline: none;
   border: none;
   color: #EEF2F5;
@@ -135,13 +135,32 @@ input, textarea {
   border-radius: 100px;
   display: inline-block;
   cursor: pointer;
+  position: relative;
   background: linear-gradient(89.7deg, #0D81D8 0.29%, #1EBDFE 99.77%);
   filter: hue-rotate(0deg);
 
-  &:hover {
+  &-bg {
+    display: block;
+    background: linear-gradient(89.7deg, #0D81D8 0.29%, #1EBDFE 99.77%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    border-radius: 300px;
+    z-index: 1;
+    transition: all .3s ease-in-out;
+  }
+
+  &-text {
+    position: relative;
+    z-index: 2;
+  }
+
+  &:hover .c-btn-bg {
     transform: scale(1.03);
     background-position: 100% 0;
-    //transition: all .5s ease-in-out;
+
   }
 
   //&--blue {
@@ -208,8 +227,8 @@ input, textarea {
   &__text {
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.05em;
-    font-size: 14px;
-    margin-bottom: 27px;
+    font-size: 13px;
+    margin-bottom: 26px;
     text-align: center;
     color: #4D5264;
 
@@ -223,6 +242,7 @@ input, textarea {
   }
 }
 
+textarea,
 .c-input {
   letter-spacing: 0.05em;
   font-weight: 300;
@@ -230,7 +250,7 @@ input, textarea {
   width: 100%;
   padding: 13px 21px;
   font-size: 14px;
-  line-height: 18px;
+  line-height: 24px;
   background: #FFFFFF;
   border: none;
   outline: none;
@@ -267,7 +287,8 @@ input, textarea {
     font-weight: normal;
     font-size: 15px;
     line-height: 34px;
-    color: $grey;
+    letter-spacing: 0.05em;
+    color: #9BA0B4;
   }
 
   &__wrapper {
@@ -466,7 +487,14 @@ input, textarea {
 
 .swiper-pagination-current {
   color: #4D5264;
+}
 
+.swiper-button-next,
+.swiper-button-prev {
+  transition: all .4s ease;
+  &:hover {
+    transform: translateY(-6px);
+  }
 }
 
 /****************************/
@@ -602,6 +630,12 @@ input, textarea {
       position: relative;
       padding-bottom: 10px;
 
+      a {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+
       img {
         display: block;
         margin-bottom: 8px;
@@ -704,6 +738,12 @@ input, textarea {
       border: 1px solid #95B7C6;
       border-radius: 100px;
       margin-right: 28px;
+      @include animation;
+
+      &:hover {
+        background-color: #7CA2BE;
+        color: #fff;
+      }
     }
 
     &-phone {
@@ -731,6 +771,11 @@ input, textarea {
         line-height: 14px;
         color: $black;
         cursor: pointer;
+        @include animation;
+
+        &:hover {
+          color: #7CA2BE;
+        }
       }
     }
 
@@ -935,6 +980,7 @@ input, textarea {
         margin: 0;
         padding: 0;
         list-style: none;
+        color: #4D5264;
 
         &__num {
           margin-right: 20px;
@@ -1182,35 +1228,42 @@ input, textarea {
       }
     }
 
-    .c-btn {
+    .c-btn-bg {
       background: linear-gradient(90.05deg, #DB40A2 0.05%, #FFA6BB 99.96%);
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
 
     &-popup {
-      position: absolute;
+      position: relative;
       z-index: 20;
-      left: 50%;
-      top: 97%;
-      transform: translateX(-50%);
+      //left: 50%;
+      top: 10px;
+      //transform: translateX(-50%);
       background: #FFFFFF;
       border-radius: 50px;
       max-width: 760px;
-      width: 95%;
+      width: 100%;
+      margin: 0 auto;
       box-shadow: 0 20px 40px 0 rgba(0,0,0,.2);
       transition: all .2s ease;
+      transition-property: opacity, visibility, height;
       opacity: 0;
       visibility: hidden;
-      padding: 30px 50px 40px;
+      height: 0;
+
 
       .c-btn {
         background: linear-gradient(89.7deg, #0D81D8 0.29%, #1EBDFE 99.77%);
       }
 
       &.is-visible {
+
+        padding: 30px 50px 40px;
+        height: auto !important;
         opacity: 1 !important;
         visibility: visible !important;
-        transition: all .2s ease;
+        transition: all .3s ease;
+        transition-property: opacity, visibility, height;
       }
 
       &::after {
@@ -1367,6 +1420,10 @@ input, textarea {
 .section-cost {
   position: relative;
 
+  .swiper-container {
+    padding: 10px 0;
+  }
+
   .swiper-pagination {
     display: none;
     flex-flow: row nowrap;
@@ -1397,33 +1454,33 @@ input, textarea {
       border: 2px solid #36F298;
     }
 
-    
+
     &:nth-child(2) {
       color:#0D81D8;
       border: 2px solid #0D81D8;
     }
 
-    
+
     &:nth-child(3) {
       color: #DB40A2;
       border: 2px solid  #DB40A2;
     }
-    
+
 
     &-active {
-      
-      &:nth-child(1) {    
-        color: #fff;    
+
+      &:nth-child(1) {
+        color: #fff;
         background: linear-gradient(90deg, #14D6C2 -30.77%, #36F298 100%);
       }
-  
-      
+
+
       &:nth-child(2) {
         color: #fff;
         background: linear-gradient(89.7deg, #0D81D8 0.29%, #1EBDFE 99.77%);
       }
-  
-      
+
+
       &:nth-child(3) {
         color: #fff;
         background: linear-gradient(90.05deg, #DB40A2 0.05%, #FFA6BB 99.96%);
@@ -1449,6 +1506,10 @@ input, textarea {
     z-index: 2;
     margin: 0 -20px;
     padding: 20px 215px;
+
+    .swiper-pagination {
+      position: relative;
+    }
 
     &-grid {
       display: flex;
@@ -1485,7 +1546,7 @@ input, textarea {
 
     &-plane {
       border-radius: 20px;
-      box-shadow: 0px 0px 20px rgba(169, 206, 222, 0.5);
+      box-shadow: 0px 0px 10px rgba(169, 206, 222, 0.5);
       background-color: #fff;
       transition: .2s ease-in-out;
 
@@ -1609,7 +1670,7 @@ input, textarea {
         }
       }
 
-      .c-btn {
+      .c-btn-bg {
         background: linear-gradient(90deg, #14D6C2 -30.77%, #36F298 100%);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       }
@@ -1662,7 +1723,7 @@ input, textarea {
           border-bottom: 3px solid #36F298;
         }
 
-        .c-btn {
+        .c-btn-bg {
           background: linear-gradient(90deg, #14D6C2 -30.77%, #36F298 100%);
         }
 
@@ -1689,7 +1750,7 @@ input, textarea {
           border-bottom: 3px solid #0D83D9;
         }
 
-        .c-btn {
+        .c-btn-bg {
           background: linear-gradient(89.7deg, #0D81D8 0.29%, #1EBDFE 99.77%);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         }
@@ -1739,7 +1800,7 @@ input, textarea {
           color: #DC44A3;
         }
 
-        .c-btn {
+        .c-btn-bg {
           background: linear-gradient(90.05deg, #DB40A2 0.05%, #FFA6BB 99.96%);
         }
 
@@ -1755,7 +1816,7 @@ input, textarea {
     }
   }
 
-  
+
 
 
 }
@@ -1779,6 +1840,8 @@ input, textarea {
       line-height: 44px;
       padding-right: 135px;
       text-align: right;
+
+      color: #4D5264;
     }
 
     &-bigtitle {
@@ -1816,24 +1879,24 @@ input, textarea {
 
       .swiper-button-prev,
       .swiper-button-next {
-        width: 52px;
-        height: 18px;
+        width: 53px;
+        height: 20px;
         margin: 0 20px 0 0;
       }
 
       .swiper-button-prev::after,
       .swiper-container-rtl .swiper-button-next::after {
         content: '';
-        width: 52px;
-        height: 18px;
+        width: 53px;
+        height: 20px;
         background: url(../src/img/icon-arrow-left.png) 0 0 no-repeat;
       }
 
       .swiper-button-next:after,
       .swiper-container-rtl .swiper-button-prev:after {
         content: '';
-        width: 52px;
-        height: 18px;
+        width: 53px;
+        height: 20px;
         background: url(../src/img/icon-arrow-right.png) 0 0 no-repeat;
       }
 
@@ -1867,6 +1930,11 @@ input, textarea {
 
       &__item {
         @include animation();
+        opacity: 0 !important;
+
+        &.swiper-slide-active {
+          opacity: 1 !important;
+        }
 
         &.active {
           @include animation();
@@ -2015,7 +2083,7 @@ input, textarea {
     }
 
     &-list {
-      padding: 0;
+      padding: 0 0 0 41px;
       margin: 0 0 14px;
       list-style: none;
 
@@ -2054,7 +2122,7 @@ input, textarea {
       text-decoration-line: underline;
       text-transform: uppercase;
       color: #7CA2BE;
-      padding-left: 25px;
+      padding-left: 43px;
     }
 
     &-form {
@@ -2093,14 +2161,19 @@ input, textarea {
       }
 
       .c-btn {
-        width: 100%;
-        background: linear-gradient(90.05deg, #DB40A2 0.05%, #FFA6BB 99.96%);
         box-shadow: 10px 9px 20px rgba(9, 126, 216, 0.22);
+
+        width: 100%;
+      }
+
+      .c-btn-bg {
+        background: linear-gradient(90.05deg, #DB40A2 0.05%, #FFA6BB 99.96%);
         border-radius: 100px;
       }
 
       .c-btn-layout {
         margin-bottom: 36px;
+        padding: 0 25px;
       }
 
       .c-form__text {
@@ -2236,7 +2309,7 @@ input, textarea {
         color: $grey;
       }
 
-      .c-btn {
+      .c-btn-bg {
         background: linear-gradient(90deg, #14D6C2 -30.77%, #36F298 100%);
       }
 
@@ -2269,7 +2342,7 @@ input, textarea {
           -moz-text-fill-color: transparent;
         }
 
-        .c-btn {
+        .c-btn-bg {
           background: linear-gradient(89.7deg, #0D81D8 0.29%, #1EBDFE 99.77%);;
         }
       }
@@ -2286,7 +2359,7 @@ input, textarea {
           -moz-text-fill-color: transparent;
         }
 
-        .c-btn {
+        .c-btn-bg {
           background: linear-gradient(90.05deg, #DB40A2 0.05%, #FFA6BB 99.96%);
         }
       }
@@ -2701,6 +2774,8 @@ input, textarea {
       margin-right: 20px;
       font-weight: 300;
       letter-spacing: 0.05em;
+      font-size: 12px;
+      line-height: 14px;
 
       &:last-child {
         margin-right: 0;
@@ -2709,7 +2784,9 @@ input, textarea {
 
     a {
       @include clear-link();
-
+      font-weight: 300;
+      font-size: 12px;
+      line-height: 14px;
       color: $black;
       text-decoration: underline;
     }
