--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -101,7 +101,7 @@
   animation: 10s background 2s ease infinite;
 }
 
-.standart .c-btn,
+.standart .c-btn-bg,
 .standart .mfp-content-bg {
   background: linear-gradient(90deg, #14D6C2 -30.77%, #36F298 100%);
 
@@ -110,7 +110,7 @@
   }
 }
 
-.business .c-btn,
+.business .c-btn-bg,
 .business .mfp-content-bg {
   background: linear-gradient(89.7deg, #0D81D8 0.29%, #1EBDFE 99.77%);
 
@@ -119,7 +119,7 @@
   }
 }
 
-.maximum .c-btn,
+.maximum .c-btn-bg,
 .maximum .mfp-content-bg {
   background: linear-gradient(90.05deg, #DB40A2 0.05%, #FFA6BB 99.96%);
 
