--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -271,7 +271,7 @@ textarea,
   width: 100%;
   display: block;
   padding: 13px 21px;
-  font-size: 16px;
+  font-size: 14px;
   background: #FFFFFF;
   border: none;
   outline: none;
@@ -1252,7 +1252,7 @@ textarea,
       height: 0;
 
 
-      .c-btn {
+      .c-btn-bg {
         background: linear-gradient(89.7deg, #0D81D8 0.29%, #1EBDFE 99.77%);
       }
 
